--- a/front-service/src/main/resources/static/index.html
+++ b/front-service/src/main/resources/static/index.html
@@ -17,7 +17,7 @@
 
 <div class="container" ng-controller="indexController">
 
-    <!--<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="collapse navbar-collapse" id="navbarNav">
 
             <ul class="navbar-nav">
@@ -41,13 +41,13 @@
                     <button class="btn btn-outline-secondary btn-sm" ng-click="tryToLogout()"> Выйти
                     </button>
                 </li>
-                <li class="nav-item" style="...">
-                    <button class="btn btn-outline-warning btn-sm" ng-click = "authcheck()"> Кто я?
-                    </button>
-                </li>
+<!--                <li class="nav-item" style="...">-->
+<!--                    <button class="btn btn-outline-warning btn-sm" ng-click = "authcheck()"> Кто я?-->
+<!--                    </button>-->
+<!--                </li>-->
             </ul>
         </div>
-    </nav>-->
+    </nav>
 
 
 
